# Concrete

./: .gitignore  .gitmodules  CXX_CONFIG.h.in  C_CONFIG.h.in  C_CXX_CONFIG.h.in  LICENSE  README.md
UnitTest/: UnitTest.cmake
common/: Configure.cmake  FileOperator.cmake
lib/: CCXXConfigFile.cmake  CConfigFile.cmake  CXXConfigFile.cmake  CXXConfigFileOptions.cmake  CompilerCheck.cmake  Concrete.cmake  ConcreteProperty.cmake  ConfigFileOptions.cmake  Configure.cmake  FileOperator.cmake  ProjectOperator.cmake  UnitTest.cmake
modules/: Concrete.cmake  ConcreteDebug.cmake  ConcreteProperties.cmake  ConcreteVariables.cmake
modules/Environment/: ConcreteDetectSystemInfo.cmake
modules/PackageManager/: ConcretePackageManager.cmake  ConcretePackageManagerExtension.cmake
modules/PackageManager/Extension/: ConcreteOpenBLASPackage.cmake  ConcreteZLibPackage.cmake
modules/PackageManager/Extention/: BoostPackage.cmake  ConcreteBoostPackage.cmake  ConcreteGTestPackage.cmake  ConcreteOpenBLASPackage.cmake  ConcreteOpenCVPackage.cmake  ConcreteProtobufPackage.cmake  ConcreteZLibPackage.cmake  GTestPackage.cmake  ZLibPackage.cmake
modules/Project/: ConcreteBuildType.cmake  ConcreteDirectory.cmake  ConcreteDirectorys.cmake  ConcreteExtensionUnityBuild.cmake  ConcreteInstall.cmake  ConcreteProject.cmake  ConcreteProjectConfigure.cmake  ConcreteSource.cmake  ConcreteTarget.cmake
modules/Project/Internal/: ConcreteBuildTypeOptions.cmake  ConcreteCheckLanguage.cmake  ConcreteProcessProperty.cmake
modules/Project/Tools/: ConcreteVisualStudio.cmake
modules/UnitTest/: ConcreteUnitTest.cmake
modules/Unitity/: ConcreteDebug.cmake  ConcreteFileHelper.cmake  ConcreteMessage.cmake  ConcreteNet.cmake  ConcreteOption.cmake  ConcreteStringHelper.cmake
test/: CMakeLists.txt  C_CXX_CONFIG.h.in
tutorials/: CMakeLists.txt  build.bat  main.cpp
tutorials/HelloWorld/: CMakeLists.txt  main.cpp
unit_test/: CMakeLists.txt
